more styling changes, added dynamic footer

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,11 @@ html.dark {
 .borderBlack {
   @apply border border-black/10;
 }
+
+.nav {
+  @apply fixed border border-white/40 bg-white/80 shadow-lg shadow-black/[0.05] backdrop-blur dark:bg-gray-950/75 dark:border-none dark:bg-opacity-75;
+}
+
+.card {
+  @apply bg-white/90 borderBlack hover:bg-gray-100 transition-colors dark:text-white/80 dark:bg-white/5 dark:hover:bg-white/10;
+}
