--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@ html.dark {
 }
 
 .nav {
-  @apply border border-white/40 bg-white/80 shadow-lg shadow-black/[0.05] backdrop-blur dark:bg-gray-950/75 dark:border-none;
+  @apply bg-pattens-blue/70 shadow-xl border border-white/70 backdrop-blur-md dark:bg-cinder/70;
 }
 
 /* .card {
@@ -23,11 +23,11 @@ html.dark {
 } */
 
 .card {
-  @apply bg-white/90 hover:nm-flat-pattens-blue-xl transition dark:text-white/80 dark:bg-white/5 dark:hover:nm-flat-gray-900-xl nm-flat-pattens-blue-lg dark:nm-flat-gray-900-lg;
+  @apply bg-white/90 hover:nm-flat-pattens-blue-xl transition dark:text-white/80 dark:hover:nm-flat-cinder-xl nm-flat-pattens-blue-lg dark:nm-flat-cinder-lg;
 }
 
 .inset-card {
-  @apply bg-[#e6e9f3] hover:nm-concave-pattens-blue transition-colors dark:text-white/80 dark:bg-white/5 dark:hover:nm-concave-gray-900 nm-concave-pattens-blue-sm dark:nm-concave-gray-900-sm;
+  @apply bg-[#e6e9f3] hover:nm-concave-pattens-blue transition-colors  dark:text-white/80 dark:hover:nm-concave-cinder nm-concave-pattens-blue-sm dark:nm-concave-cinder-sm;
 }
 
 .hamburger-line {
