changed highlighting color and refined mobile nav menu

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@ html.dark {
 }
 
 .nav {
-  @apply bg-pattens-blue/70 shadow-xl border border-white/70 backdrop-blur-md dark:bg-cinder/70;
+  @apply bg-pattens-blue/70 backdrop-blur-md dark:bg-cinder/70;
 }
 
 /* .card {
